# tzf

./: .gitignore  BORDER_CHANGE.md  CITATION.cff  CLAUDE.md  Makefile  NOTICE  README.md  backports.go  buf.gen.yaml  buf.yaml  build_notice.sh  f.go  go.mod  go.sum  tzf.go  tzf_bitmap.go  tzf_bitmap_test.go  tzf_default_finder.go  tzf_default_finder_test.go  tzf_fuzzy.go  tzf_fuzzy_test.go  tzf_rtree.go  tzf_rtree_test.go  tzf_test.go  tzf_tzb.go  tzf_tzb_benchmark_test.go  tzf_tzb_test.go
.github/: dependabot.yml
.github/workflows/: build-pb-doc.yml  build-tzpb.yml  ci.yml  deploy.yml  release.yml
cmd/buildgridtzpb/: main.go
cmd/checkboundaryrelease/: main.go
cmd/checkrelease/: main.go
cmd/compare-lite-full/: main.go
cmd/comparetzpb/: main.go
cmd/compresspbtz/: main.go
cmd/compresstopotzpb/: main.go
cmd/compresstzpb/: main.go
cmd/deduplicatetzpb/: main.go
cmd/geojson2tzpb/: main.go
cmd/preindex/: main.go
cmd/preindextzpb/: main.go
compress/: compress.go
convert/: convert.go  pb2geometry.go  revert.go
data/: README.md
docs/: data.js  pb.html
pb/: README.md  index.html  tzinfo.compress.pb.go  tzinfo.compress.proto  tzinfo.pb.go  tzinfo.proto
preindex/: exclude.geojson  exclude.go  exclude_test.go  preindex.go  preindex_test.go
python/: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
python/tzfpy/: .gitignore  __init__.py  main.go  tests.py
reduce/: compress.go  compress_topo.go  reduce.go  reduce_topology_test.go
scripts/: bench2summary.py  bench2summary_test.py
tzkey/: tzkey.go
(+58 files in other folders)
